--- a/resources/scss/link-gallery/link-gallery.scss
+++ b/resources/scss/link-gallery/link-gallery.scss
@@ -32,8 +32,9 @@ section {
   }
 }
 
+@include theme.add-loader($z-index: 1);
+
 .board {
-  opacity: 0;
   border: 1px solid purple;
   box-shadow: 5px 5px 10px rgba(128, 0, 128, 0.1);
   margin: 5% auto auto;
